--- a/intranet/templates/intranet/base.html
+++ b/intranet/templates/intranet/base.html
@@ -14,13 +14,13 @@
   <title>{% block title %}{% endblock title %}TheMyLovelyIntranet</title>
 </head>
 <body>
-{% include 'nav.html' %}
+{% include 'intranet/nav.html' %}
 <div class="container">
 {% bootstrap_messages %}
 {% block content %}
 <h1>Please Replace here!!</h1>
 {% endblock content %}
 <div>
-{% include 'footer.html' %}
+{% include 'intranet/footer.html' %}
 </body>
 </html>
