--- a/intranet/templates/intranet/pages/main/main.html
+++ b/intranet/templates/intranet/pages/main/main.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'intranet/base.html' %} {% block content %}
 <div>
   <h1>Hello !</h1>
 </div>
