--- a/intranet/templates/intranet/nav.html
+++ b/intranet/templates/intranet/nav.html
@@ -1,6 +1,4 @@
-<nav
-  class="navbar navbar-expand-lg navbar-light bg-light"
->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" href="#">Lovely My 💔 Intranet</a>
     <button
@@ -17,7 +15,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'main' %}">Home</a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="{% url 'intranet:main' %}"
+            >Home</a
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
