:bug: fix user model

--- a/intranet/templates/intranet/nav.html
+++ b/intranet/templates/intranet/nav.html
@@ -23,6 +23,9 @@
           >
         </li>
         {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'intranet:logout' %}">Logout</a>
+        </li>
         {% else %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'intranet:login' %}">Login</a>
