--- a/intranet/templates/intranet/pages/post/new.html
+++ b/intranet/templates/intranet/pages/post/new.html
@@ -2,11 +2,12 @@
 
 {% load bootstrap5 %}
 
-{% block title %}Edit Post | {% endblock title %}
+
+{% block title %}New Post | {% endblock title %}
 
 {% block content %}
 <div>
-  <h1>Edit Post!</h1>
+  <h1>New Post!</h1>
   <div>
     {% include 'intranet/pages/post/form.html' %}
   </div>
