add profile page and profile edit page

--- a/intranet/templates/intranet/nav.html
+++ b/intranet/templates/intranet/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light transparent">
   <div class="container">
     <a class="navbar-brand" href="{% url 'intranet:main' %}"
       >Lovely My 💔 Intranet</a
