--- a/intranet/templates/intranet/pages/post/post.html
+++ b/intranet/templates/intranet/pages/post/post.html
@@ -46,5 +46,14 @@
   <div class="post-content mx-2">
     {{ object.content }}
   </div>
+	<div>
+		{% if not object.comments.all %}
+			No comments yet
+		{% else %}
+			{% for comment in object.get_comments %}
+			{% include 'intranet/pages/post/comment.html' with comment=comment %}
+			{% endfor %}
+		{% endif %}
+	</div>
 </div>
 {% endblock content %}
