--- a/intranet/templates/intranet/footer.html
+++ b/intranet/templates/intranet/footer.html
@@ -1,1 +1,8 @@
-<footer height="56px">yongjule, jaeskim</footer>
+<footer height="56px">
+  <div class="container">
+    <a
+      href="https://github.com/42Seoul-Piscine-Python-Django/The-My-Lovely-Intranet"
+      >&copy; yongjule, jaeskim</a
+    >
+  </div>
+</footer>
