--- a/intranet/templates/intranet/pages/post/comment.html
+++ b/intranet/templates/intranet/pages/post/comment.html
@@ -1,15 +1,34 @@
-<div style="margin-left: 24px;">
-	<div>
-	{{comment.author}}
-		{% if comment.parent.author%} to {{comment.parent.author}} {% endif %}
-	</div>
-	<p>
-		{{comment}}
-	</p>
-	{% for comment in comment.get_comments %}
-	 {% include 'intranet/pages/post/comment.html' with comment=comment %}
-	{% endfor %}
-	<form >
-		{% %}
-	</form>
+{% load bootstrap4 %}
+
+<div style="margin-left: 12px" class="comment">
+  <h5>{{comment.author}}</h5>
+  <p class="comment-body">{{comment}}</p>
+  <div class="reply mb-2">
+    {% if comment.author == user %}
+      <a href="{% url 'intranet:comment-delete' comment.post.id comment.id  %}"><small>Remove</small></a> <span class="dots"></span>
+    {% endif %}
+    <small
+      onclick="document.getElementById('comment-form-{{comment.id}}').hidden = false;"
+      >Reply</small
+    >
+  </div>
+  <form
+    id="comment-form-{{comment.id}}"
+    action="{% url 'intranet:comment' comment.post.id %}"
+    method="post"
+    class="form"
+    hidden="true"
+  >
+    {% csrf_token %} {% bootstrap_form comment.get_replayform %} {% buttons %}
+    {% bootstrap_button "Save" button_type="submit" button_class="btn-primary" %}
+    <a
+      class="btn btn-secondary"
+      href="javascript:document.getElementById('comment-form-{{comment.id}}').hidden = true;"
+      >Cancle</a
+    >
+    {% endbuttons %}
+  </form>
+  {% for child in comment.get_comments %}
+    {% include 'intranet/pages/post/comment.html' with comment=child %}
+  {% endfor %}
 </div>
