--- a/intranet/templates/intranet/pages/post/post.html
+++ b/intranet/templates/intranet/pages/post/post.html
@@ -6,10 +6,9 @@
 <div class="container-sm post">
   <h1 class="post-title fw-500">{{ object.title }}</h1>
   <div class="d-flex align-items-center mb-4 text-muted author-info">
-    <!-- TODO:URL변경하기! -->
     <a
       class="d-flex align-items-center text-muted text-decoration-none"
-      href=""
+      href="{% url 'intranet:profile-detail' object.author.id %}"
     >
       {% if object.author.profile_image %}
       <img
@@ -24,15 +23,16 @@
     </a>
     <span
       class="d-flex align-items-center ml-2"
-      title="create at {{ object.creationDate|date:"P - d.M.y" }}"
+      title="lastedit {{ object.updateDate|date:"d.M.y P" }}"
       data-toggle="tooltip" data-placement="top"
     >
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" role="img" class="bi bi-calendar-day mr-2" viewBox="0 0 16 16">
         <path d="M4.684 11.523v-2.3h2.261v-.61H4.684V6.801h2.464v-.61H4v5.332h.684zm3.296 0h.676V8.98c0-.554.227-1.007.953-1.007.125 0 .258.004.329.015v-.613a1.806 1.806 0 0 0-.254-.02c-.582 0-.891.32-1.012.567h-.02v-.504H7.98v4.105zm2.805-5.093c0 .238.192.425.43.425a.428.428 0 1 0 0-.855.426.426 0 0 0-.43.43zm.094 5.093h.672V7.418h-.672v4.105z"/>
         <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
       </svg>
-      {{ object.updateDate|date:"P - d.M.y" }}
+      {{ object.creationDate|date:"d.M.y P" }}
     </span>
+    {% if object.author == user or user.is_staff %}
     <a
       href="{% url 'intranet:post-edit' object.id %}"
       class="d-flex align-items-center ml-2 btn btn-outline-dark btn-sm" role="button">
@@ -42,11 +42,28 @@
       </svg>
       edit
     </a>
+    <a
+      href="{% url 'intranet:post-delete' object.id %}"
+      class="d-flex align-items-center ml-2 btn btn-outline-danger btn-sm" role="button">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash mr-2" viewBox="0 0 16 16">
+        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+      </svg>
+      delete
+    </a>
+    {% endif %}
   </div>
   <div class="post-content mx-2">
     {{ object.content }}
   </div>
 	<div>
+    <hr/>
+    <form action="{% url 'intranet:comment' object.id %}" method="post" class="form">
+      {% csrf_token %} {% bootstrap_form comment_form %}
+      {% buttons %}
+        {% bootstrap_button "Save" button_type="submit" button_class="btn-primary" %}
+      {% endbuttons %}
+    </form>
 		{% if not object.comments.all %}
 			No comments yet
 		{% else %}
